ehisqlgen 1.10.0 (2017-04-02)
---------------------------
- add DbColBlob
- add DbColXml

ehisqlgen 1.9.0 (2016-12-21)
---------------------------
- add DbColNumber.min, max
- add DbColDecimal.min, max
- fixed FK constraint in GeoPackageGenerator

ehisqlgen 1.8.0 (2016-11-25)
---------------------------
- make GeneratorJdbc.addDropLine() public
- make GeneratorJdbc.addCreateLine() public

ehisqlgen 1.7.0 (2016-11-18)
---------------------------
- make constraint name unique and respect given max length

ehisqlgen 1.6.0 (2016-11-16)
---------------------------
- DbColVarchar default size set to UNLIMITED

ehisqlgen 1.5.0 (2016-08-09)
---------------------------
- PG: map DbColId to bigint

ehisqlgen 1.4.1 (2016-03-07)
---------------------------
- GPKG: fixed mapping of DbColNumber to INTEGER

ehisqlgen 1.4.0 (2016-01-21)
---------------------------
- added UNIQUE support to GPKG and PostGIS driver

ehisqlgen 1.3.0 (2016-01-04)
---------------------------
- added GeoPackage support

ehisqlgen 1.2.1 (2015-12-21)
---------------------------
- fixed missing geom index 
- MULTISURFACE added

ehisqlgen 1.2.0 (2015-09-16)
---------------------------
- DbColumn.index added to support CREATE INDEX on any column
- DbColumn.referencedTable added to support REFERENCES TO
- DbColumn.onDeleteAction added to support ON DELETE CASCADE/RESTRICT
- DbColumn.onUpdateAction added to support ON UPDATE CASCADE

ehisqlgen 1.1.0 (2015-09-10)
---------------------------
- DbColUuid added to support UUID in postgresql
- DbColumn.defaultValue added to support DEFAULT in postgresql