@@ -2,6 +2,7 @@ ehisqlgen 1.10.0 (2017-04-02)
 ---------------------------
 - add DbColBlob
 - add DbColXml
+- fixed: make index name unique per schema 
 
 ehisqlgen 1.9.0 (2016-12-21)
 ---------------------------
